--- a/src/style.css
+++ b/src/style.css
@@ -56,10 +56,10 @@ button {
 }
 
 #file_img {
-  user-select: none;
+  /* user-select: none; */
   /* user-drag: none; */
-  -webkit-user-drag: none;
-  -moz-user-select: none;
+  /* -webkit-user-drag: none;
+  -moz-user-select: none; */
 }
 
 body {
